--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="u-container-layout u-container-layout-1">
             <h1 class="u-heading-font u-text u-text-white u-text-1">Pottery Studio</h1>
             <p class="u-text u-text-font u-text-white u-text-2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.</p>
-            <a href="https://nicepage.com/website-builder" class="u-btn u-button-style u-btn-1">join today</a>
+            <a href="#" class="u-btn u-button-style u-btn-1">join today</a>
           </div>
         </div>
       </div>
