--- a/Home.html
+++ b/Home.html
@@ -92,7 +92,7 @@
                 <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-2"></div>
                 <p class="u-text u-text-font u-text-4">16 Nov 2023 - 20 Feb 2024<br>Two months Session
                 </p>
-                <a href="https://nicepage.com/k/result-html-templates" class="u-btn u-button-style u-btn-1">i want to go</a>
+                <a href="#" class="u-btn u-button-style u-btn-1">i want to go</a>
               </div>
             </div>
           </div>
