--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
           </div>
         </div>
-        <a href="https://nicepage.com/static-site-generator" class="u-btn u-button-style u-btn-1">more products</a>
+        <a href="#" class="u-btn u-button-style u-btn-1">more products</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-2-base u-section-6" id="sec-2d78">
