--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="u-border-3 u-border-palette-1-base u-line u-line-horizontal u-line-1"></div>
                 <p class="u-text u-text-font u-text-2">Lorem Ipsum&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
                                 make a type specimen book.</p>
-                <a href="https://nicepage.com/landing-page" class="u-btn u-button-style u-btn-1">book your seat</a>
+                <a href="#" class="u-btn u-button-style u-btn-1">book your seat</a>
               </div>
             </div>
             <div class="u-align-left u-container-style u-image u-layout-cell u-left-cell u-size-40 u-size-xs-60 u-image-1">
